--- a/eudevfin/reports-core/src/main/resources/org/devgateway/eudevfin/reports/core/dac2a/dac2a_template.jrxml
+++ b/eudevfin/reports-core/src/main/resources/org/devgateway/eudevfin/reports/core/dac2a/dac2a_template.jrxml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <jasperReport xmlns="http://jasperreports.sourceforge.net/jasperreports" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://jasperreports.sourceforge.net/jasperreports http://jasperreports.sourceforge.net/xsd/jasperreport.xsd" name="dac2a_template" pageWidth="1350" pageHeight="750" orientation="Landscape" whenNoDataType="AllSectionsNoDetail" columnWidth="1310" leftMargin="20" rightMargin="20" topMargin="20" bottomMargin="20" resourceBundle="i18n" uuid="bad8772b-9ff8-49ae-a2c0-34a59258237b">
 	<property name="ireport.zoom" value="2.0"/>
-	<property name="ireport.x" value="1290"/>
+	<property name="ireport.x" value="0"/>
 	<property name="ireport.y" value="0"/>
 	<style name="defaultStyle" isDefault="true" mode="Transparent" fontName="Arial" fontSize="10"/>
 	<parameter name="REPORTING_COUNTRY" class="java.lang.String"/>
@@ -515,6 +515,7 @@ RECEIVED
 	</columnHeader>
 	<detail>
 		<band height="500" splitType="Stretch">
+			<printWhenExpression><![CDATA[$V{REPORT_COUNT} == 1]]></printWhenExpression>
 			<subreport>
 				<reportElement x="0" y="0" width="1310" height="500" uuid="f7648a23-fa38-4a5a-82ce-1eda4a67c1b3"/>
 				<subreportParameter name="REPORTING_YEAR">
@@ -533,6 +534,7 @@ RECEIVED
 			</subreport>
 		</band>
 		<band height="18" splitType="Stretch">
+			<printWhenExpression><![CDATA[$V{REPORT_COUNT} == 1]]></printWhenExpression>
 			<staticText>
 				<reportElement x="0" y="0" width="220" height="16" uuid="fda7e1ab-2ed9-43ec-959f-0047094a4a47"/>
 				<textElement verticalAlignment="Middle">
@@ -549,6 +551,7 @@ RECEIVED
 			</staticText>
 		</band>
 		<band height="500">
+			<printWhenExpression><![CDATA[$V{REPORT_COUNT} == 1]]></printWhenExpression>
 			<subreport>
 				<reportElement x="0" y="0" width="1310" height="500" uuid="f7648a23-fa38-4a5a-82ce-1eda4a67c1b3"/>
 				<subreportParameter name="REPORTING_YEAR">
@@ -567,6 +570,7 @@ RECEIVED
 			</subreport>
 		</band>
 		<band height="20">
+			<printWhenExpression><![CDATA[$V{REPORT_COUNT} == 1]]></printWhenExpression>
 			<staticText>
 				<reportElement x="0" y="0" width="220" height="16" uuid="4365a9fe-af5f-4d86-add2-3eeef3142506"/>
 				<textElement verticalAlignment="Middle">
