--- a/eudevfin/reports-core/src/main/resources/org/devgateway/eudevfin/reports/core/aq/aq_master_memo_totaloda.jrxml
+++ b/eudevfin/reports-core/src/main/resources/org/devgateway/eudevfin/reports/core/aq/aq_master_memo_totaloda.jrxml
@@ -34,7 +34,7 @@ WHERE {[Form Type].[bilateralOda.advanceQuestionnaire], [Form Type].[multilatera
 				<textElement verticalAlignment="Top">
 					<font fontName="Arial" size="10" isBold="false"/>
 				</textElement>
-				<textFieldExpression><![CDATA[$R{aq.totalGrossODA}+ new SimpleDateFormat("HH:mm:ss").format(new Date())]]></textFieldExpression>
+				<textFieldExpression><![CDATA[$R{aq.totalGrossODA}]]></textFieldExpression>
 			</textField>
 			<textField pattern="#,##0.00" isBlankWhenNull="true">
 				<reportElement key="totalGrossODAYear1" x="352" y="0" width="100" height="14" uuid="4150ac15-ec14-4e02-86b2-98311846b6bd"/>
