--- a/eudevfin/common-ui/src/main/resources/org/devgateway/eudevfin/ui/common/components/AbstractField.html
+++ b/eudevfin/common-ui/src/main/resources/org/devgateway/eudevfin/ui/common/components/AbstractField.html
@@ -19,7 +19,7 @@
             <wicket:child/>			
             <span class="add-on" wicket:id="appender"/>
         </div>
-        <span wicket:id="readOnlyComponent"/>
+        <span wicket:id="readOnlyRendition"/>
     </div>
 </wicket:panel>
 </body>
