Added bar component for NVD3. (ODAEU-257)

--- a/eudevfin/reports-ui/src/main/resources/org/devgateway/eudevfin/reports/ui/components/BarChartNVD3.html
+++ b/eudevfin/reports-ui/src/main/resources/org/devgateway/eudevfin/reports/ui/components/BarChartNVD3.html
@@ -2,8 +2,10 @@
 <html xmlns="http://www.w3.org/1999/xhtml" xmlns:wicket="http://wicket.apache.org">
 <body>
 <wicket:panel>
-    <div wicket:id="pieChart">
-        <svg style="height: 350px;"></svg>
+    <div style="position: relative;">
+        <div wicket:id="barChart">
+            <svg style="height: 350px;"></svg>
+        </div>
     </div>
 </wicket:panel>
 </body>
