--- a/eudevfin/dim/src/main/resources/org/devgateway/eudevfin/dim/desktop/components/SearchBoxPanel.html
+++ b/eudevfin/dim/src/main/resources/org/devgateway/eudevfin/dim/desktop/components/SearchBoxPanel.html
@@ -16,11 +16,18 @@
 </head>
 <body>
 <wicket:panel>
-    <div class="search-box-panel ">
-        <div class="row">
-            <div wicket:id="search-box"/>
-        </div>
-    </div>
+	        <form wicket:id="searchForm">
+	            <div class="homepage-search-element" wicket:id="searchString"/>
+				<div class="homepage-search-element" wicket:id="year"/>
+				<div class="homepage-search-element" wicket:id="sector"/>
+				<br/>
+				<div class="homepage-search-element" wicket:id="extendingAgency"/>
+				<div class="homepage-search-element" wicket:id="recipient"/>				
+				<div class="homepage-search-element" wicket:id="formType"/>		
+				<br/>		
+				<input wicket:id="submit" type="button"/>
+				<input wicket:id="reset" type="button"/>
+			</form>            				
     <div wicket:id="search-results-panel-wrapper">
         <div wicket:id="search-results-panel"/>
     </div>
