--- a/eudevfin/dim/src/main/resources/org/devgateway/eudevfin/dim/desktop/components/GroupingBoxPanel.html
+++ b/eudevfin/dim/src/main/resources/org/devgateway/eudevfin/dim/desktop/components/GroupingBoxPanel.html
@@ -19,6 +19,7 @@
 	        <form wicket:id="searchForm">
 	            <div class="homepage-search-element" wicket:id="donorIdSearch"/>
 				<div class="homepage-search-element" wicket:id="crsIdSearch"/>		
+				<div class="homepage-search-element" wicket:id="active"/>	
 				<br/>		
 				<input wicket:id="submit" type="button"/>
 				<input wicket:id="reset" type="button"/>
